fixed bug in plotting script, and added code for performance evaluation and confusion matrix generation

--- a/Feature Importance.ipynb
+++ b/Feature Importance.ipynb
@@ -709,7 +709,7 @@
     "# models\n",
     "dataSetOfInterest = \"dataset_1_\"\n",
     "dataPath = \"data/featureImportanceTestData/dataset_1_full.csv\"\n",
-    "modelDict = allDataModelDict[\"dataset_1_\"][modelName]\n",
+    "modelDict = allDataModelDict[dataSetOfInterest][modelName]\n",
     "bestModel = modelDict[\"gridcv\"].best_estimator_\n",
     "featureTransformer = bestModel.steps[0][1]# 0th step is the feature extraction, and the first element\n",
     "# of that is the actual function for it. \n",
