--- a/ML_notebook.ipynb
+++ b/ML_notebook.ipynb
@@ -477,61 +477,48 @@
    "metadata": {},
    "source": [
     "## Get confusion matrices\n",
-    "Right now models are refit on the entire dataset so you need to handle that "
+    "Right now models are refit on the entire dataset so you need to handle that. This code has been reimplemented in the notebook `Model Performance Evaluation`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rocauc: 0.8758549931600548\n",
-      "f1: 0.8235294117647058\n",
-      "prec: 0.8235294117647058\n",
-      "rec: 0.8235294117647058\n",
-      "confusion matrix. tuth by prediction\n",
-      "[[37  6]\n",
-      " [ 6 28]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.metrics import roc_auc_score, f1_score, recall_score, precision_score, confusion_matrix\n",
-    "import copy\n",
-    "valDF = pd.read_csv(\"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_test.csv\")\n",
-    "valDF = valDF.set_index(\"isolate\")\n",
-    "X_df = valDF.drop(labels = [\"pbr_res\"], axis = 1)\n",
-    "X_val = X_df.values\n",
-    "Y_df = valDF[\"pbr_res\"]\n",
-    "Y_val = Y_df.values \n",
+    "# assert False, \"This code has been reimplemented in the notebook `Model Performance Evaluation`. Please use that\"\n",
+    "# from sklearn.metrics import roc_auc_score, f1_score, recall_score, precision_score, confusion_matrix\n",
+    "# import copy\n",
+    "# valDF = pd.read_csv(\"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_test.csv\")\n",
+    "# valDF = valDF.set_index(\"isolate\")\n",
+    "# X_df = valDF.drop(labels = [\"pbr_res\"], axis = 1)\n",
+    "# X_val = X_df.values\n",
+    "# Y_df = valDF[\"pbr_res\"]\n",
+    "# Y_val = Y_df.values \n",
     "\n",
-    "trainDF = pd.read_csv(\"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_train.csv\")\n",
-    "trainDF = trainDF.set_index(\"isolate\")\n",
-    "X_df = trainDF.drop(labels = [\"pbr_res\"], axis = 1)\n",
-    "X_train = X_df.values\n",
-    "Y_df = trainDF[\"pbr_res\"]\n",
-    "Y_train = Y_df.values \n",
+    "# trainDF = pd.read_csv(\"data/MLData/pbr_ml_project_datasets_20180423/dataset_12_train.csv\")\n",
+    "# trainDF = trainDF.set_index(\"isolate\")\n",
+    "# X_df = trainDF.drop(labels = [\"pbr_res\"], axis = 1)\n",
+    "# X_train = X_df.values\n",
+    "# Y_df = trainDF[\"pbr_res\"]\n",
+    "# Y_train = Y_df.values \n",
     "\n",
-    "bestEstimatorRefit = copy.deepcopy(modelDict[\"gridcv\"].best_estimator_)\n",
-    "bestEstimatorRefit.fit(X_train, Y_train)\n",
-    "preds = bestEstimatorRefit.predict(X_val)\n",
-    "scores = bestEstimatorRefit.predict_proba(X_val)\n",
-    "rocauc = roc_auc_score(y_true = Y_val, y_score = scores[:,1])\n",
-    "f1 = f1_score(y_true = Y_val, y_pred = preds)\n",
-    "prec = precision_score(y_true = Y_val, y_pred = preds)\n",
-    "rec = recall_score(y_true = Y_val, y_pred = preds)\n",
-    "print(\"rocauc: {}\".format(rocauc))\n",
-    "print(\"f1: {}\".format(f1))\n",
-    "print(\"prec: {}\".format(prec))\n",
-    "print(\"rec: {}\".format(rec))\n",
-    "print(\"confusion matrix. tuth by prediction\")\n",
-    "print(confusion_matrix(y_true = Y_val, y_pred = preds))\n",
+    "# bestEstimatorRefit = copy.deepcopy(modelDict[\"gridcv\"].best_estimator_)\n",
+    "# bestEstimatorRefit.fit(X_train, Y_train)\n",
+    "# preds = bestEstimatorRefit.predict(X_val)\n",
+    "# scores = bestEstimatorRefit.predict_proba(X_val)\n",
+    "# rocauc = roc_auc_score(y_true = Y_val, y_score = scores[:,1])\n",
+    "# f1 = f1_score(y_true = Y_val, y_pred = preds)\n",
+    "# prec = precision_score(y_true = Y_val, y_pred = preds)\n",
+    "# rec = recall_score(y_true = Y_val, y_pred = preds)\n",
+    "# print(\"rocauc: {}\".format(rocauc))\n",
+    "# print(\"f1: {}\".format(f1))\n",
+    "# print(\"prec: {}\".format(prec))\n",
+    "# print(\"rec: {}\".format(rec))\n",
+    "# print(\"confusion matrix. tuth by prediction\")\n",
+    "# print(confusion_matrix(y_true = Y_val, y_pred = preds))\n",
     "# truth by prediction"
    ]
   },
