added some untested code to allow for SVC if SVC was trained with predict probs

--- a/Model Performance Evaluation.ipynb
+++ b/Model Performance Evaluation.ipynb
@@ -182,7 +182,7 @@
     "if dataPath_val is not None:\n",
     "    print(\"All predictions are obtained using the validation set\")\n",
     "    preds = bestModel.predict(X_val)\n",
-    "    if modelName != \"SVC\":\n",
+    "    if modelName != \"SVC\" or bestModel.steps[1][1].probability:\n",
     "        scores = bestModel.predict_proba(X_val)\n",
     "    else:# probs not available for SVC\n",
     "        scores = None\n",
@@ -193,7 +193,7 @@
     "    print(\"All prediction are obtained using cross validation on the training set\")\n",
     "    scores = cross_val_predict(bestModel, X_val, Y_val, method = \"predict_proba\", cv = 5)\n",
     "    preds = np.argmax(scores, axis = 1)\n",
-    "if modelName != \"SVC\":\n",
+    "if modelName != \"SVC\" or bestModel.steps[1][1].probability:\n",
     "    rocauc = roc_auc_score(y_true = Y_val, y_score = scores[:,1])\n",
     "else:# probs not available for SVC\n",
     "    rocauc = None\n",
