made the number of jobs an argument

--- a/ML_notebook.ipynb
+++ b/ML_notebook.ipynb
@@ -44,7 +44,8 @@
     "# dataPath = \"data/MLData/largeData/\"\n",
     "# dataPrefix = \"dataset_2_\"\n",
     "modelDictPicklePath = \"data/modelDictMultiDataRun.pkl\"\n",
-    "n_folds = 10"
+    "n_folds = 10\n",
+    "n_jobs = 2"
    ]
   },
   {
@@ -453,7 +454,7 @@
     "    dataPrefix = \"dataset_{}_\".format(i)\n",
     "    print(\"Running model search on data {}\".format(dataPrefix))\n",
     "    allDataModelDict[dataPrefix] = performGridSearch(dataPath = dataPath, dataPrefix = dataPrefix,\n",
-    "                                                     n_folds = n_folds)\n",
+    "                                                     n_folds = n_folds, n_jobs = n_jobs)\n",
     "    print(\"\\n\\n\\n\\n\\n\")"
    ]
   },
@@ -596,7 +597,7 @@
     "    dataPrefix = \"dataset_{}_\".format(i)\n",
     "    print(\"Running model search on data {}\".format(dataPrefix))\n",
     "    allDataModelDict[dataPrefix] = performGridSearch(dataPath = dataPath, dataPrefix = dataPrefix,\n",
-    "                                                     n_folds = n_folds)\n",
+    "                                                     n_folds = n_folds, n_jobs = n_jobs)\n",
     "    print(\"\\n\\n\\n\\n\\n\")"
    ]
   },
@@ -863,7 +864,7 @@
     "    dataPrefix = \"dataset_{}_\".format(i)\n",
     "    print(\"Running model search on data {}\".format(dataPrefix))\n",
     "    allDataModelDict[dataPrefix] = performGridSearch(dataPath = dataPath, dataPrefix = dataPrefix,\n",
-    "                                                     n_folds = n_folds)\n",
+    "                                                     n_folds = n_folds, n_jobs = n_jobs)\n",
     "    print(\"\\n\\n\\n\\n\\n\")"
    ]
   },
