--- a/Feature Importance.ipynb
+++ b/Feature Importance.ipynb
@@ -59,7 +59,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def plot_coefficients(classifier, feature_names, top_features=10): \n",
+    "#     coef = classifier.best_estimator_.coef_.ravel()\n",
+    "#     top_positive_coefficients = np.argsort(coef)[-top_features:]\n",
+    "#     top_negative_coefficients = np.argsort(coef)[:top_features]\n",
+    "#     top_coefficients = np.hstack([top_negative_coefficients, top_positive_coefficients])\n",
+    "#     # create plot\n",
+    "#     sb.set_context(\"poster\")\n",
+    "#     plt.figure(figsize=(15, 5))\n",
+    "#     plt.title(\"Feature Importances (Support Vector Classifier)\")\n",
+    "#     colors = ['crimson' if c < 0 else 'cornflowerblue' for c in coef[top_coefficients]]\n",
+    "#     plt.bar(np.arange(2 * top_features), coef[top_coefficients], color=colors)\n",
+    "#     feature_names = np.array(feature_names)\n",
+    "#     plt.xticks(np.arange(0, 1 + 2 * top_features), feature_names[top_coefficients], rotation=60, ha='right') plt.show()\n",
+    "#     np.asarray(feature_names)[top_positive_coefficients]\n",
+    "\n",
+    "#     plot_coefficients(svm_model, list(X.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "coef_ is only available when using a linear kernel",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-36061eec2270>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbestModelParams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/envs/AMR_ML/lib/python3.6/site-packages/sklearn/svm/base.py\u001b[0m in \u001b[0;36mcoef_\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    478\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mcoef_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    479\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkernel\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'linear'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 480\u001b[0;31m             raise AttributeError('coef_ is only available when using a '\n\u001b[0m\u001b[1;32m    481\u001b[0m                                  'linear kernel')\n\u001b[1;32m    482\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: coef_ is only available when using a linear kernel"
+     ]
+    }
+   ],
+   "source": [
+    "# bestModelParams.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +132,7 @@
       "661 unique features passed to this model\n",
       "203 features given feature importance above 0\n",
       "\n",
-      "Sanity check. This is the best model being used. Please be sure that The parameters match up with the model you specified. Sometimes an old model Can be used by accident if the kernel is not restarted\n",
+      "SANITY CHECK. This is the best model being used. Please be sure that The parameters match up with the model you specified. Sometimes an old model Can be used by accident if the kernel is not restarted\n",
       "\n",
       " LogisticRegression(C=1000, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
