deprecated the notebook so people can use the feature importance script instead

--- a/Feature Importance.ipynb
+++ b/Feature Importance.ipynb
@@ -4,8 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Importance Extraction\n",
-    "This notebook lets you look at the feature importance for the best model in each model class for a given dataset. You'll have to be sure that the modelDictPath supplied was trained on the dataset you want to look at. This is because feature names are not stored in the model, so you need the **original** dataset used to train the model in order to extract human readable features."
+    "# Feature Importance Extraction (DEPRECATED)\n",
+    "This notebook lets you look at the feature importance for the best model in each model class for a given dataset. You'll have to be sure that the modelDictPath supplied was trained on the dataset you want to look at. This is because feature names are not stored in the model, so you need the **original** dataset used to train the model in order to extract human readable features.\n",
+    "\n",
+    "# DEPRECATED\n",
+    "This code is now deprecated and you should use the script `extract_feature_importance.py` to get what you need. "
    ]
   },
   {
@@ -14,15 +17,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "%matplotlib inline\n",
+    "# %load_ext autoreload\n",
+    "# %autoreload 2\n",
+    "# %matplotlib inline\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import pickle\n",
-    "from collections import defaultdict\n",
-    "import csv\n"
+    "# import numpy as np\n",
+    "# import pandas as pd\n",
+    "# import pickle\n",
+    "# from collections import defaultdict\n",
+    "# import csv\n"
    ]
   },
   {
@@ -31,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelDictPath = \"data/featureImportanceTestData/modelDictMultiDataRun_datasets_1_2_3_7_20190722.pkl\""
+    "# modelDictPath = \"data/featureImportanceTestData/modelDictMultiDataRun_datasets_1_2_3_7_20190722.pkl\""
    ]
   },
   {
@@ -40,8 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(modelDictPath, \"rb\") as pklFile:\n",
-    "    allDataModelDict = pickle.load(pklFile)"
+    "# with open(modelDictPath, \"rb\") as pklFile:\n",
+    "#     allDataModelDict = pickle.load(pklFile)"
    ]
   },
   {
@@ -50,11 +53,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict\n",
-    "modelName = \"SVC\"\n",
-    "modelDict = allDataModelDict[\"dataset_1_\"][modelName]\n",
-    "dataPath = \"data/featureImportanceTestData/dataset_1_full.csv\"\n",
-    "bestModel = modelDict[\"gridcv\"].best_estimator_"
+    "# from collections import defaultdict\n",
+    "# modelName = \"SVC\"\n",
+    "# modelDict = allDataModelDict[\"dataset_1_\"][modelName]\n",
+    "# dataPath = \"data/featureImportanceTestData/dataset_1_full.csv\"\n",
+    "# bestModel = modelDict[\"gridcv\"].best_estimator_"
    ]
   },
   {
@@ -759,114 +762,114 @@
     }
    ],
    "source": [
-    "modelName = \"logistic\"\n",
-    "assert modelName in [\"randomForest\", \"GBTC\", \"logistic\", \"SVC\"], \"invalid model name.\"\n",
-    "##################################################\n",
-    "#######################NOTE#######################\n",
-    "##################################################\n",
-    "# Be sure that the dataPath and dataSetOfInterest\n",
-    "# correspond to the same dataset used to train the\n",
-    "# models\n",
-    "dataSetOfInterest = \"dataset_1_\"\n",
-    "dataPath = \"data/featureImportanceTestData/dataset_1_full.csv\"\n",
-    "modelDict = allDataModelDict[dataSetOfInterest][modelName]\n",
-    "bestModel = modelDict[\"gridcv\"].best_estimator_\n",
-    "featureTransformer = bestModel.steps[0][1]# 0th step is the feature extraction, and the first element\n",
-    "# of that is the actual function for it. \n",
+    "# modelName = \"logistic\"\n",
+    "# assert modelName in [\"randomForest\", \"GBTC\", \"logistic\", \"SVC\"], \"invalid model name.\"\n",
+    "# ##################################################\n",
+    "# #######################NOTE#######################\n",
+    "# ##################################################\n",
+    "# # Be sure that the dataPath and dataSetOfInterest\n",
+    "# # correspond to the same dataset used to train the\n",
+    "# # models\n",
+    "# dataSetOfInterest = \"dataset_1_\"\n",
+    "# dataPath = \"data/featureImportanceTestData/dataset_1_full.csv\"\n",
+    "# modelDict = allDataModelDict[dataSetOfInterest][modelName]\n",
+    "# bestModel = modelDict[\"gridcv\"].best_estimator_\n",
+    "# featureTransformer = bestModel.steps[0][1]# 0th step is the feature extraction, and the first element\n",
+    "# # of that is the actual function for it. \n",
     "\n",
     "\n",
     "\n",
-    "isolateList = []\n",
-    "with open(dataPath) as fp:\n",
-    "    csvReader = csv.reader(fp)\n",
-    "    header = next(csvReader)\n",
-    "if len(header) > 100000:\n",
-    "    print(\"Reading large data with more efficient code\")\n",
-    "    with open(dataPath) as fp:\n",
-    "        csvReader = csv.reader(fp)\n",
-    "        header = next(csvReader)\n",
-    "        for line in csvReader:\n",
-    "            isolateList.append(line[0])\n",
-    "    df = np.loadtxt(dataPath, delimiter = \",\", skiprows = 1, usecols = range(1, len(header))) \n",
-    "    df = pd.DataFrame(df, columns = header[1:])\n",
-    "    df.insert(loc = 0, column = \"isolate\", value = isolateList) \n",
-    "else:\n",
-    "    df = pd.read_csv(dataPath)\n",
+    "# isolateList = []\n",
+    "# with open(dataPath) as fp:\n",
+    "#     csvReader = csv.reader(fp)\n",
+    "#     header = next(csvReader)\n",
+    "# if len(header) > 100000:\n",
+    "#     print(\"Reading large data with more efficient code\")\n",
+    "#     with open(dataPath) as fp:\n",
+    "#         csvReader = csv.reader(fp)\n",
+    "#         header = next(csvReader)\n",
+    "#         for line in csvReader:\n",
+    "#             isolateList.append(line[0])\n",
+    "#     df = np.loadtxt(dataPath, delimiter = \",\", skiprows = 1, usecols = range(1, len(header))) \n",
+    "#     df = pd.DataFrame(df, columns = header[1:])\n",
+    "#     df.insert(loc = 0, column = \"isolate\", value = isolateList) \n",
+    "# else:\n",
+    "#     df = pd.read_csv(dataPath)\n",
     "\n",
     "\n",
     "\n",
-    "df = df.set_index(\"isolate\")\n",
-    "X_df = df.drop(labels = [\"pbr_res\"], axis = 1)\n",
-    "X = X_df.values\n",
-    "allFeatureNames = np.array(list(X_df))\n",
-    "chosenFeatures = allFeatureNames[[featureTransformer.transform(np.arange(X.shape[1]).reshape([1, X.shape[1]]))]]\n",
-    "chosenFeatures = chosenFeatures[0]\n",
+    "# df = df.set_index(\"isolate\")\n",
+    "# X_df = df.drop(labels = [\"pbr_res\"], axis = 1)\n",
+    "# X = X_df.values\n",
+    "# allFeatureNames = np.array(list(X_df))\n",
+    "# chosenFeatures = allFeatureNames[[featureTransformer.transform(np.arange(X.shape[1]).reshape([1, X.shape[1]]))]]\n",
+    "# chosenFeatures = chosenFeatures[0]\n",
     "\n",
     "\n",
-    "if modelName == \"randomForest\":\n",
-    "    # Random forest had a bit of a naming mishap where I switched from\n",
-    "    # RFC to randomForest\n",
-    "    bestModelParams = bestModel.get_params()[\"RFC\"]\n",
-    "else:\n",
-    "    bestModelParams = bestModel.get_params()[modelName]\n",
+    "# if modelName == \"randomForest\":\n",
+    "#     # Random forest had a bit of a naming mishap where I switched from\n",
+    "#     # RFC to randomForest\n",
+    "#     bestModelParams = bestModel.get_params()[\"RFC\"]\n",
+    "# else:\n",
+    "#     bestModelParams = bestModel.get_params()[modelName]\n",
     "    \n",
     "    \n",
-    "if modelName == \"GBTC\":\n",
-    "    print(\"feature importance for GBTC\")\n",
-    "    featureImportance = bestModelParams.feature_importances_\n",
-    "elif modelName == \"randomForest\":\n",
-    "    print(\"feature importance for random forest\")\n",
+    "# if modelName == \"GBTC\":\n",
+    "#     print(\"feature importance for GBTC\")\n",
+    "#     featureImportance = bestModelParams.feature_importances_\n",
+    "# elif modelName == \"randomForest\":\n",
+    "#     print(\"feature importance for random forest\")\n",
     "\n",
-    "    featureImportance = bestModelParams.feature_importances_\n",
-    "elif modelName == \"logistic\":\n",
-    "    print(\"Feature importance logistic\")\n",
-    "    featureImportance = bestModelParams.coef_[0]\n",
-    "elif modelName == \"SVC\":\n",
-    "    if bestModel[\"SVC\"].kernel != \"linear\":\n",
-    "        print(\"no coefficients are available for SVC without a linear kernel\\n\",\n",
-    "             \"This SVC's kernel is {}\".format(bestModel[\"SVC\"].kernel))\n",
-    "        assert False, \"Breaking the code because we can't get feature importance here\"\n",
-    "else:\n",
-    "    assert False, \"Model name: {} not implemented for feature importance\".format(modelName)\n",
+    "#     featureImportance = bestModelParams.feature_importances_\n",
+    "# elif modelName == \"logistic\":\n",
+    "#     print(\"Feature importance logistic\")\n",
+    "#     featureImportance = bestModelParams.coef_[0]\n",
+    "# elif modelName == \"SVC\":\n",
+    "#     if bestModel[\"SVC\"].kernel != \"linear\":\n",
+    "#         print(\"no coefficients are available for SVC without a linear kernel\\n\",\n",
+    "#              \"This SVC's kernel is {}\".format(bestModel[\"SVC\"].kernel))\n",
+    "#         assert False, \"Breaking the code because we can't get feature importance here\"\n",
+    "# else:\n",
+    "#     assert False, \"Model name: {} not implemented for feature importance\".format(modelName)\n",
     "\n",
-    "featureImportanceDict = defaultdict(int) # features and coefficients line up\n",
-    "# but because there can be repeated features for logistic regression this needs to be \n",
-    "# added together.\n",
-    "for feat, imp in zip(chosenFeatures, featureImportance):\n",
-    "    featureImportanceDict[feat] += imp\n",
+    "# featureImportanceDict = defaultdict(int) # features and coefficients line up\n",
+    "# # but because there can be repeated features for logistic regression this needs to be \n",
+    "# # added together.\n",
+    "# for feat, imp in zip(chosenFeatures, featureImportance):\n",
+    "#     featureImportanceDict[feat] += imp\n",
     "\n",
-    "nNonZeroFeats = 0\n",
-    "for _, imp in featureImportanceDict.items():\n",
-    "    if imp != 0.0:\n",
-    "        nNonZeroFeats += 1\n",
-    "featureImportanceTupleList = sorted(featureImportanceDict.items(),\n",
-    "                                   key=lambda p:np.abs(p[1]), reverse = True)# sorting list    \n",
-    "\n",
-    "\n",
-    "print(\"{} features before feature selection\".format(len(allFeatureNames)))\n",
-    "print(\"{} features passed to this model\".format(len(chosenFeatures))) # for logistic\n",
-    "print(\"{} unique features passed to this model\".format(len(set(chosenFeatures)))) # for logistic\n",
-    "print(\"{} features given feature importance above 0\\n\".format(nNonZeroFeats))\n",
-    "\n",
-    "print(\"SANITY CHECK. This is the best model being used. Please be sure that\",\n",
-    "     \"The parameters match up with the model you specified. Sometimes an old model\",\n",
-    "     \"Can be used by accident if the kernel is not restarted\\n\\n\",\n",
-    "      bestModel[modelName] if modelName != 'randomForest' else bestModel[\"RFC\"],\n",
-    "     \"\\n\\n\\n\\n\")\n",
+    "# nNonZeroFeats = 0\n",
+    "# for _, imp in featureImportanceDict.items():\n",
+    "#     if imp != 0.0:\n",
+    "#         nNonZeroFeats += 1\n",
+    "# featureImportanceTupleList = sorted(featureImportanceDict.items(),\n",
+    "#                                    key=lambda p:np.abs(p[1]), reverse = True)# sorting list    \n",
     "\n",
     "\n",
-    "print(\"human readable feature importance\")\n",
-    "for feature, importanceMeasure in featureImportanceTupleList:\n",
-    "    if importanceMeasure != 0.0:\n",
-    "        print(\"Feature {} coefficient/importance {}\\n\".format(feature, importanceMeasure))\n",
+    "# print(\"{} features before feature selection\".format(len(allFeatureNames)))\n",
+    "# print(\"{} features passed to this model\".format(len(chosenFeatures))) # for logistic\n",
+    "# print(\"{} unique features passed to this model\".format(len(set(chosenFeatures)))) # for logistic\n",
+    "# print(\"{} features given feature importance above 0\\n\".format(nNonZeroFeats))\n",
+    "\n",
+    "# print(\"SANITY CHECK. This is the best model being used. Please be sure that\",\n",
+    "#      \"The parameters match up with the model you specified. Sometimes an old model\",\n",
+    "#      \"Can be used by accident if the kernel is not restarted\\n\\n\",\n",
+    "#       bestModel[modelName] if modelName != 'randomForest' else bestModel[\"RFC\"],\n",
+    "#      \"\\n\\n\\n\\n\")\n",
+    "\n",
+    "\n",
+    "# print(\"human readable feature importance\")\n",
+    "# for feature, importanceMeasure in featureImportanceTupleList:\n",
+    "#     if importanceMeasure != 0.0:\n",
+    "#         print(\"Feature {} coefficient/importance {}\\n\".format(feature, importanceMeasure))\n",
     "\n",
     "\n",
     "        \n",
-    "print(\"Printing feature importance so it can be copied into a csv file\")\n",
-    "print(\"featureName,importanceMetric\")\n",
-    "for feature, importanceMeasure in featureImportanceTupleList:\n",
-    "    if importanceMeasure != 0.0:\n",
-    "        print(\"{},{}\".format(feature, importanceMeasure))\n"
+    "# print(\"Printing feature importance so it can be copied into a csv file\")\n",
+    "# print(\"featureName,importanceMetric\")\n",
+    "# for feature, importanceMeasure in featureImportanceTupleList:\n",
+    "#     if importanceMeasure != 0.0:\n",
+    "#         print(\"{},{}\".format(feature, importanceMeasure))\n"
    ]
   },
   {
